Add new translations for time and days of the week

--- a/src/values/translations/strings_en.json
+++ b/src/values/translations/strings_en.json
@@ -37,5 +37,16 @@
 		, "next" : "Next"
 		, "text_speed" : "Text Speed"
 		, "text_speed_description" : "Choose the speed of the text."
+		, "morning" : "Morning"
+		, "afternoon" : "Afternoon"
+		, "evening" : "Evening"
+		, "night" : "Night"
+		, "monday" : "Monday"
+		, "tuesday" : "Tuesday"
+		, "wednesday" : "Wednesday"
+		, "thursday" : "Thursday"
+		, "friday" : "Friday"
+		, "saturday" : "Saturday"
+		, "sunday" : "Sunday"
 	}
 }
