--- a/src/values/translations/strings_en.json
+++ b/src/values/translations/strings_en.json
@@ -54,5 +54,8 @@
 		, "sleep" : "Sleep"
 		, "wait" : "Wait"
 		, "quests" : "Quests"
+		, "completed" : "Completed"
+		, "quest_completed_description" : "This quest has been completed."
+		, "quest_is_in_development" : "That is all for the moment. The quest is in development."
 	}
 }
